--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <i class="bx bx-menu" id="btn"></i>
         </div>
         <div class="user">
-            <img class="user-img" src="/assets/IMG_20190519_113559-01-01.jpeg" alt="foto de perfil">
+            <img class="user-img" src="./assets/user.jpeg" alt="foto de perfil">
             <div>
                 <p class="bold">Clint B.</p>
                 <p>Admin</p>
